--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "CRM project",
   "main": "index.js",
   "scripts": {
+    "server":"nodemon -e ts --exec npm start",
+    "start": "node --loader ts-node/esm -r dotenv/config src/server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +34,7 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "concurrently": "^6.2.1",
