--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "baseUrl": "./",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./src/server/types","./node_modules/@types"]
   },
   "include": ["src/server/**/*"],
   "exclude": ["node_modules"]
