--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.4",
     "typescript": "^4.4.3",
@@ -70,5 +71,8 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.9",
     "msw": "^0.35.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
