--- a/src/client/package.json
+++ b/src/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.22.0",
     "cypress": "^8.5.0",
+    "dayjs": "^1.10.7",
     "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
