--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.20.28",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "axios": "^0.22.0",
     "cypress": "^8.5.0",
     "dayjs": "^1.10.7",
