--- a/src/client/package.json
+++ b/src/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.22.0",
+    "clsx": "^1.1.1",
     "cypress": "^8.5.0",
     "dayjs": "^1.10.7",
     "draft-js": "^0.11.7",
