--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "@toast-ui/react-calendar": "^1.0.5",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.28",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
@@ -24,6 +25,7 @@
     "cypress": "^8.5.0",
     "dayjs": "^1.10.7",
     "draft-js": "^0.11.7",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
