--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.5",
     "bcrypt": "^5.0.1",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.9.1",
