--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "CRM project",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "client": "npm start --prefix src/client",
     "server": "nodemon --watch src/server -e ts --exec npm start",
     "start": "node --loader ts-node/esm -r dotenv/config src/server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
