--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,12 +14,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-calendar": "^1.0.5",
+    "@types/aos": "^3.0.4",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.28",
     "@types/numeral": "^2.0.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.22.0",
     "clsx": "^1.1.1",
     "cypress": "^8.5.0",
@@ -45,7 +48,7 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
-  "proxy": "http://localhost:5001",
+  "proxy": "http://localhost:5005",
   "eslintConfig": {
     "extends": [
       "react-app",
