--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.2",
+    "@mui/x-data-grid": "^5.0.0-beta.6",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
