--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^3.0.2",
     "sanitizer": "^0.1.3",
     "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
