--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Weird work around for using jest on client and server with create-react-app",
   "scripts": {
+    "build:fields": "node --loader ts-node/esm -r tsconfig-paths/register ./tools/fieldBuilder.ts ",
     "test": "jest"
   },
   "keywords": [],
   "author": "Tevin Banton",
   "license": "MIT",
   "dependencies": {
+    "@types/inquirer": "^8.1.3",
+    "inquirer": "^8.2.0",
     "ts-jest": "^27.0.7"
   },
   "devDependencies": {
