--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^17.0.9",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
@@ -33,13 +35,14 @@
     "googleapis": "^85.0.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.0",
     "mongoose": "^6.0.5",
+    "rimraf": "^3.0.2",
     "sanitizer": "^0.1.3",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "concurrently": "^6.2.1",
